lustre/ptlrpc/service.c
@@ -2849,6 +2849,9 @@ static int ptlrpc_main(void *arg)
 
 		/* reset le_ses to initial state */
 		env->le_ses = NULL;
+		/* Refill the context before execution to make sure
+		 * all thread keys are allocated */
+		lu_env_refill(env);
 		/* Process all incoming reqs before handling any */
 		if (ptlrpc_server_request_incoming(svcpt)) {
 			lu_context_enter(&env->le_ctx);
