lustre/target/tgt_handler.c
@@ -713,9 +713,6 @@ int tgt_request_handle(struct ptlrpc_request *req)
 		}
 	}
 
-	/* Refill the context, to make sure all thread keys are allocated */
-	lu_env_refill(req->rq_svc_thread->t_env);
-
 	req_capsule_init(&req->rq_pill, req, RCL_SERVER);
 	tsi->tsi_pill = &req->rq_pill;
 	tsi->tsi_env = req->rq_svc_thread->t_env;
